Footer fix + Highlights section fix + Welcome text increased readability
Welcome text increased readability
- new background color
- smaller maximum width

Highlights section fix
- fixed issue with icons being wide apart, rendering the design not pleasant to look at

New design for the footer
- more content
- updated contact information
- added google map functionality
- fixed responsiveness
- general clean-up of styling
- copyright bar is now part of the footer (something that Alex noted during the exam)
- better user feedback on the overall design of the footer
- responsive SoMe buttons

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
 }
 
+/* text decoration remove */
+
+a:link, a:visited, a:hover, a:active { 
+  text-decoration: none;
+}
+
 /* Remove default padding */
 ul[class],
 ol[class] {
